base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web
spec:
  type: ClusterIP

  selector:
    app: demo-web

  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
